--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <div class="col-xs-12 col-sm-8 inline-about">
                       <p>Learning while creating web solutions is my passion. Whether you need a responsive Wordpress website or a functional website using Bootstrap, I can help you accomplish these tasks to meet your needs.</p>
                       <br>
-                      <p>My skills are centered around the implementation of HTML and CSS on the backbone of Bootstrap and Wordpress, design layout, and basic Photoshop manipulations.</p>
+                      <p>My skills are centered around the implementation of HTML and CSS on the framework of Bootstrap or Wordpress, design layout, and basic Photoshop manipulations.</p>
                       <br>
                       <p>Currently, I am developing my skills in Javascript and have aspirations to become an expert Web Developer using this diverse language. I am especially interested in node.js in order to create spectacular web applications that interact with the server.</p>
                     </div>
