Highland Pine Gifts

--- a/index.html
+++ b/index.html
@@ -348,19 +348,25 @@
                 <div class="row">
                     <div class="col-xs-8 col-xs-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Highland Pine Gifts</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/cake.png" class="img-responsive img-centered" alt="">
-                            <p>Please check back soon to see added content.</p>
+                            <img src="images/highlandpinegiftsthumb.jpeg" class="img-responsive img-centered" alt="">
+                            <p>Highland Pine Gifts needed an ecommerce web solution in order to display their products. The website needed to be clean, responsive, and easy to maintain new and existing products. Another requirement was to allow the user to be able to complete a transaction from a shopping cart through the use of PayPal.</p>
+                            <br>
+                            <p>Using WordPress, I built highlandpinegifts.com so that each of these requirements is met. The design is free flowing and permits the user to navigate and see content easily. Starting with the Home page, the user is greeted with a clear navigation bar and a fluid slider of featured products.</p> 
+                            <br>
+                            <p>I also built a Shop page where Highland Pine Gifts can display their products under various categories and subcategories. This allows the user to find content quickly. The Shop page allows the user to add a product to their cart and also functions as a gateway to the product’s description page.</p> 
+                            <br>
+                            <p>The product’s description page gives an overview of the product and price. Once the user adds product to the cart, they have the option to checkout. The user may choose to register an account or they can choose to checkout as a guest. Once the purchase is completed, a customized emailed invoice will be sent to the user.</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong></strong>
+                                    <strong>Highland Pine Gifts</strong>
                                 </li>
                                 <li>Date:
-                                    <strong></strong>
+                                    <strong>January 2016</strong>
                                 </li>
                                 <li>Service:
-                                    <strong>Web Development</strong>
+                                    <strong>eCommerce Solution</strong>
                                 </li>
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
