--- a/index.html
+++ b/index.html
@@ -314,7 +314,9 @@
                         <div class="modal-body">
                             <h2>Portfolio</h2>
                             <hr class="star-primary">
+                            <a href="jessehadley.com">
                             <img src="images/portfolio.jpeg" class="img-responsive img-centered" alt="">
+                            </a>
                             <p>Using HTML and CSS with the power of Bootstrap, my portfolio project creates a responsive design that is clear, concise, and informative. Based off of a template, this project has been completely reworked to improve the scalability and fluidity of the user’s browsing experience. Coupled with these aspects, the overall design and color coordination give a long scroll experience that encompasses one-page browsing.</p>
                             <br>
                             <p>When deciding on how to strategically position the content of the webpage to tell “my story”, I happened upon the closed-door image. To me, the closed-door image represents a multitude of unseen possibilities and opportunities. Opening these “doors” is my passion, and in doing so, I have the opportunity to help others find solutions to their web needs. It is finding these solutions that drives me to express my creative talent and assist others in achieving their personal or business web oriented goals.</p>
@@ -350,7 +352,9 @@
                         <div class="modal-body">
                             <h2>Highland Pine Gifts</h2>
                             <hr class="star-primary">
+                            <a href="http://highlandpinegifts.com/">
                             <img src="images/highlandpinegiftsthumb.jpeg" class="img-responsive img-centered" alt="">
+                            </a>
                             <p>Highland Pine Gifts needed an ecommerce web solution in order to display their products. The website needed to be clean, responsive, and easy to maintain new and existing products. Another requirement was to allow the user to be able to complete a transaction from a shopping cart through the use of PayPal.</p>
                             <br>
                             <p>Using WordPress, I built highlandpinegifts.com so that each of these requirements is met. The design is free flowing and permits the user to navigate and see content easily. Starting with the Home page, the user is greeted with a clear navigation bar and a fluid slider of featured products.</p> 
