--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                         <div class="modal-body">
                             <h2>Portfolio</h2>
                             <hr class="star-primary">
-                            <a href="jessehadley.com">
+                            <a href="#page-top">
                             <img src="images/portfolio.jpeg" class="img-responsive img-centered" alt="">
                             </a>
                             <p>Using HTML and CSS with the power of Bootstrap, my portfolio project creates a responsive design that is clear, concise, and informative. Based off of a template, this project has been completely reworked to improve the scalability and fluidity of the user’s browsing experience. Coupled with these aspects, the overall design and color coordination give a long scroll experience that encompasses one-page browsing.</p>
@@ -352,7 +352,7 @@
                         <div class="modal-body">
                             <h2>Highland Pine Gifts</h2>
                             <hr class="star-primary">
-                            <a href="http://highlandpinegifts.com/">
+                            <a href="http://highlandpinegifts.com/" target="_blank">
                             <img src="images/highlandpinegiftsthumb.jpeg" class="img-responsive img-centered" alt="">
                             </a>
                             <p>Highland Pine Gifts needed an ecommerce web solution in order to display their products. The website needed to be clean, responsive, and easy to maintain new and existing products. Another requirement was to allow the user to be able to complete a transaction from a shopping cart through the use of PayPal.</p>
