--- a/index.html
+++ b/index.html
@@ -144,7 +144,18 @@
                         <img src="images/highlandpinegiftsthumb.jpeg" class="img-responsive" alt="">
                     </a>
                 </div>
-                
+                <div class="col-sm-4 portfolio-item">
+                    <a href="#portfolioModal3" class="portfolio-link a-modal" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="#" class="img-responsive" alt="">JumpStartHygiene.com Under Construction
+                    </a>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- Contact Section -->
@@ -328,6 +339,40 @@
                                 </li>
                                 <li>Service:
                                     <strong>eCommerce Solution</strong>
+                                </li>
+                            </ul>
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-8 col-xs-offset-2">
+                        <div class="modal-body">
+                            <h2>Highland Pine Gifts</h2>
+                            <hr class="star-primary">
+                            <a href="#" target="_blank">
+                            <img src="#" class="img-responsive img-centered" alt="">
+                            </a>
+                            <p></p>
+                            <ul class="list-inline item-details">
+                                <li>Client:
+                                    <strong>Jump Start Hygiene</strong>
+                                </li>
+                                <li>Date:
+                                    <strong>2016</strong>
+                                </li>
+                                <li>Service:
+                                    <strong>Event Solution</strong>
                                 </li>
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
