--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="#" class="img-responsive" alt="">JumpStartHygiene.com Under Construction
+                        <img src="" class="img-responsive" alt="">JumpStartHygiene.com Under Construction
                     </a>
                 </div>
             </div>
@@ -358,7 +358,7 @@
                 <div class="row">
                     <div class="col-xs-8 col-xs-offset-2">
                         <div class="modal-body">
-                            <h2>Highland Pine Gifts</h2>
+                            <h2>Jump Start Hygiene</h2>
                             <hr class="star-primary">
                             <a href="#" target="_blank">
                             <img src="#" class="img-responsive img-centered" alt="">
