--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="" class="img-responsive" alt="">JumpStartHygiene.com Under Construction
+                        <img src="images/door-bannerthumb.png" class="img-responsive" alt="">JumpStartHygiene.com Under Construction
                     </a>
                 </div>
             </div>
@@ -346,7 +346,7 @@
                     </div>
                 </div>
             </div>
-            <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
