--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="images/door-banner-thumb.png" class="img-responsive" alt="">JumpStartHygiene.com Under Construction
+                        <img src="images/door-banner-thumb.png" class="img-responsive" alt="">
                     </a>
                 </div>
             </div>
