--- a/index.html
+++ b/index.html
@@ -347,6 +347,9 @@
                 </div>
             </div>
             <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
+            </div>
+        </div>
+    </div>
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
