--- a/index.html
+++ b/index.html
@@ -362,8 +362,8 @@
                         <div class="modal-body">
                             <h2>Jump Start Hygiene</h2>
                             <hr class="star-primary">
-                            <a href="#" target="_blank">
-                            <img src="#" class="img-responsive img-centered" alt="">
+                            <a href="#" target="blank">
+                            <img src="images/door-banner-thumb.png" class="img-responsive img-centered" alt="">
                             </a>
                             <p></p>
                             <ul class="list-inline item-details">
