--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Jesse Hadley Portfolio</title>
+    <title>Centrix Web Design</title>
 
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -42,7 +42,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top">Jesse Hadley</a>
+                <a class="navbar-brand" href="#page-top">Centrix Web Design</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -204,7 +204,7 @@
                            <button type="submit" class="btn btn-success btn-lg">Send</button>
                           </div>
                        </div>
-                          <input type="hidden" name="_next" value="//jessehadley.com/thanks" />
+                          <input type="hidden" name="_next" value="//centrixwebdesign.com/thanks" />
                           <input type="hidden" name="_subject" value="New submission!" />
                     </form>
                     <div class = "bottom-padding">
@@ -255,7 +255,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12">
-                        Copyright &copy; Jesse Hadley 2016
+                        Copyright &copy; Centrix Web Design 2016
                     </div>
                 </div>
             </div>
