--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                         </ul>
                     </div>
                     <div class="footer-col col-xs-12 col-sm-4">
-                        <h3>Web Design</h3>
+                        <h3>Centrix Web Design</h3>
                         <p>For Web Development inquiries, please send me a message in the form above</p>
                     </div>
                 </div>
