--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="#page-top">Centrix Web Design</a>
             </div>
