--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
+          <div>    
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-center">
+                <ul class="nav navbar-nav navbar-right">
                     <li class="hidden">
                         <a href="#contact">Free Consultation</a>
                     </li>
@@ -71,6 +72,7 @@
                     </li>
                 </ul>
             </div>
+           </div>
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container-fluid -->
