--- a/index.html
+++ b/index.html
@@ -47,19 +47,14 @@
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
-          <div>    
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="hidden">
-                        <a href="#contact">Free Consultation</a>
-                    </li>
-                </ul>
-            </div>
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="hidden">
                         <a href="#page-top"></a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#contact">Free Consultation</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#about">About</a>
@@ -72,7 +67,6 @@
                     </li>
                 </ul>
             </div>
-           </div>
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container-fluid -->
