--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#contact">Free Consultation</a>
+                        <a href="www.http://centrixwebdesign.com/free-webdesignconsultation/">Free Consultation</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#about">About</a>
