--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="images/portfolio.jpeg" class="img-responsive" alt="">
+                        <img src="images/portfolio.jpeg" class="img-responsive" alt="Centrix Web Design">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -146,7 +146,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="images/highlandpinegiftsthumb.jpeg" class="img-responsive" alt="">
+                        <img src="images/highlandpinegiftsthumb.jpeg" class="img-responsive" alt="Highland Pine Gifts">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -156,7 +156,17 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="images/door-banner-thumb.png" class="img-responsive" alt="">
+                        <img src="images/jumpstarthygiene.png" class="img-responsive" alt="Jump Start Hygiene">
+                    </a>
+                </div>
+                <div class="col-sm-4 portfolio-item">
+                    <a href="#portfolioModal4" class="portfolio-link a-modal" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="images/dentalcleaning.png" class="img-responsive" alt="Dental Cleaning">
                     </a>
                 </div>
             </div>
@@ -289,7 +299,7 @@
                         <div class="modal-body">
                             <h2>Portfolio</h2>
                             <hr class="star-primary">
-                            <img src="images/portfolio.jpeg" class="img-responsive img-centered" alt="">
+                            <img src="images/portfolio.jpeg" class="img-responsive img-centered" alt="Centrix Web Design">
                             <p>Using HTML and CSS with the power of Bootstrap, my portfolio project creates a responsive design that is clear, concise, and informative. Based off of a template, this project has been completely reworked to improve the scalability and fluidity of the user’s browsing experience. Coupled with these aspects, the overall design and color coordination give a long scroll experience that encompasses one-page browsing.</p>
                             <br>
                             <p>When deciding on how to strategically position the content of the webpage to tell “my story”, I happened upon the closed-door image. To me, the closed-door image represents a multitude of unseen possibilities and opportunities. Opening these “doors” is my passion, and in doing so, I have the opportunity to help others find solutions to their web needs. It is finding these solutions that drives me to express my creative talent and assist others in achieving their personal or business web oriented goals.</p>
@@ -326,7 +336,7 @@
                             <h2>Highland Pine Gifts</h2>
                             <hr class="star-primary">
                             <a href="http://highlandpinegifts.com/" target="_blank">
-                            <img src="images/highlandpinegiftsthumb.jpeg" class="img-responsive img-centered" alt="">
+                            <img src="images/highlandpinegiftsthumb.jpeg" class="img-responsive img-centered" alt="Highland Pine Gifts">
                             </a>
                             <p>Highland Pine Gifts needed an ecommerce web solution in order to display their products. The website needed to be clean, responsive, and easy to maintain new and existing products. Another requirement was to allow the user to be able to complete a transaction from a shopping cart through the use of PayPal.</p>
                             <br>
@@ -368,7 +378,7 @@
                             <h2>Jump Start Hygiene</h2>
                             <hr class="star-primary">
                             <a href="#" target="blank">
-                            <img src="images/door-banner-thumb.png" class="img-responsive img-centered" alt="">
+                            <img src="images/jumpstarthygiene.png" class="img-responsive img-centered" alt="Jump Start Hygiene">
                             </a>
                             <p></p>
                             <ul class="list-inline item-details">
@@ -380,6 +390,42 @@
                                 </li>
                                 <li>Service:
                                     <strong>Event Solution</strong>
+                                </li>
+                            </ul>
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-8 col-xs-offset-2">
+                        <div class="modal-body">
+                            <h2>Dental Cleaning</h2>
+                            <hr class="star-primary">
+                            <a href="#" target="blank">
+                            <img src="images/dentalcleaning.png" class="img-responsive img-centered" alt="Dental Cleaning">
+                            </a>
+                            <p></p>
+                            <ul class="list-inline item-details">
+                                <li>Client:
+                                    <strong>Dental Cleaning</strong>
+                                </li>
+                                <li>Date:
+                                    <strong>2016</strong>
+                                </li>
+                                <li>Service:
+                                    <strong>Dental Hygiene Blog</strong>
                                 </li>
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
