--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
             </div>
                 <div class="row">
                     <div class="col-xs-12 col-sm-8 inline-about">
-                      <p>Learning while creating web solutions is my passion. Whether you need a responsive Wordpress website or a functional website using Bootstrap, I can help you accomplish these tasks to meet your needs.</p>
+                      <p>Whether you need a responsive functional website or better SEO performance, I can help you accomplish these tasks to meet your needs.</p>
                       <br>
-                      <p>My skills are centered around the implementation of HTML and CSS on the framework of Bootstrap or Wordpress, design layout, and basic Photoshop manipulations.</p>
+                      <p>My skills are centered around the implementation of responsive web design utilizing Bootstrap and WordPress, design layout, and the use of Adobe Suite. I also implement result driven SEO practices to improve traffic to your site.</p>
                       <br>
-                      <p>Currently, I am developing my skills in Javascript and have aspirations to become an expert Web Developer using this diverse language. I am especially interested in node.js in order to create spectacular web applications that interact with the server.</p>
+                      <p>I continually look to improve my skills in Javascript, SEO and am passionate about bringing imagination to life.</p>
                     </div>
                 </div>
         </div>
