--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </div>
                 <div class="row">
                     <div class="col-xs-12 col-sm-8 inline-about">
-                      <p>Whether you need a responsive functional website or better SEO performance, I can help you accomplish these tasks to meet your needs.</p>
+                      <p>Whether you need a responsive functional website or better SEO performance, I can help you accomplish these tasks to meet your goals.</p>
                       <br>
                       <p>My skills are centered around the implementation of responsive web design utilizing Bootstrap and WordPress, design layout, and the use of Adobe Suite. I also implement result driven SEO practices to improve traffic to your site.</p>
                       <br>
