--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top">Centrix Web Design</a>
+               <h1><a class="navbar-brand" href="#page-top">Centrix Web Design</a></h1>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
