--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-               <h1 class="navbar-heading"><a class="navbar-brand" href="#page-top">Centrix Web Design</a></h1>
+               <h1 class="navbar-heading"><a class="navbar-bran" href="#page-top">Centrix Web Design</a></h1>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
