--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-               <h1 class="navbar-heading"><a href="#page-top">Centrix Web Design</a></h1>
+               <a class="navbar-brand" href="#page-top">Centrix Web Design</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -80,7 +80,7 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-8">
                     <div class="intro-text">
-                        <p class="name">Open the door to new possibilities</p>
+                        <h1 class="name">Open the door to new possibilities</h1>
                           <hr class = "line-separator"></hr>
                         <p class="skills">Web Development - Web Design - User Experience</p>
                     </div>
