--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-8">
                     <div class="intro-text">
-                        <h1 class="name">Open the door to new possibilities</h1>
+                        <p class="name">Open the door to new possibilities</p>
                           <hr class = "line-separator"></hr>
-                        <p class="skills">Web Development - Web Design - User Experience</p>
+                        <h1 class="skills">Web Development - Web Design - User Experience</h1>
                     </div>
                 </div>
             </div>
