--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
-                    <li class="page-scroll free">
+                    <li class="free">
                         <a href="/free-webdesignconsultation/">Free Consultation</a>
                     </li>
                     <li class="page-scroll">
