--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
-                    <li class="free">
-                        <a href="/free-webdesignconsultation/">Free Consultation</a>
+                    <li class="page-scroll">
+                        <a class="free" href="/free-webdesignconsultation/">Free Consultation</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#about">About</a>
