--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <div class="intro-text">
                         <p class="name">Open the door to new possibilities</p>
                           <hr class = "line-separator"></hr>
-                        <h1 class="skills">Web Development - Web Design - WordPress Web Developmen</h1>
+                        <h1 class="skills">Web Development - Web Design - WordPress Web Development</h1>
                     </div>
                 </div>
             </div>
