--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-               <a class="navbar-brand" href="#page-top">Centrix Web Design</a>
+               <a class="navbar-brand" href="https://centrixwebdesign.com">Centrix Web Design</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
