--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
             </div>
                 <div class="row">
                     <div class="col-xs-12 col-sm-8 inline-about">
-                      <p>Whether you need a responsive functional website or better SEO performance, I can help you accomplish these tasks to meet your goals.</p>
+                      <p>Whether you need a responsive functional website or better SEO performance, Centrix Web Design can help you accomplish these tasks to meet your goals.</p>
                       <br>
-                      <p>My skills are centered around the implementation of responsive web design utilizing Bootstrap and WordPress, design layout, and the use of Adobe Suite. I also implement result driven SEO practices to improve traffic to your site.</p>
+                      <p>Web design that is centered around the implementation of responsive web development utilizing Bootstrap and WordPress, design layout, and the use of Adobe Suite. Centrix Web Design also implements result driven SEO practices to improve traffic to your site.</p>
                       <br>
-                      <p>I continually look to improve my skills in Javascript, SEO and am passionate about bringing imagination to life.</p>
+                      <p>We continually keep up on the latest trends in technology, Javascript, and SEO. Our passion is to bring your imagination to life.</p>
                     </div>
                 </div>
         </div>
@@ -308,9 +308,9 @@
                             <h2>Portfolio</h2>
                             <hr class="star-primary">
                             <img src="images/portfolio.jpeg" class="img-responsive img-centered" alt="Centrix Web Design">
-                            <p>Using HTML and CSS with the power of Bootstrap, my portfolio project creates a responsive design that is clear, concise, and informative. Based off of a template, this project has been completely reworked to improve the scalability and fluidity of the user’s browsing experience. Coupled with these aspects, the overall design and color coordination give a long scroll experience that encompasses one-page browsing.</p>
+                            <p>Using HTML and CSS with the power of Bootstrap, the portfolio project creates a responsive design that is clear, concise, and informative. This project has been completely reworked to improve the scalability and fluidity of the user’s browsing experience. Coupled with these aspects, the overall design and color coordination give a long scroll experience that encompasses one-page browsing.</p>
                             <br>
-                            <p>When deciding on how to strategically position the content of the webpage to tell “my story”, I happened upon the closed-door image. To me, the closed-door image represents a multitude of unseen possibilities and opportunities. Opening these “doors” is my passion, and in doing so, I have the opportunity to help others find solutions to their web needs. It is finding these solutions that drives me to express my creative talent and assist others in achieving their personal or business web oriented goals.</p>
+                            <p>When deciding on how to strategically position the content of the webpage to tell our story”, We happened upon the closed-door image. To us, the closed-door image represents a multitude of unseen possibilities and opportunities. Opening these “doors” is our passion, and in doing so, we have the opportunity to help others find solutions to their web needs. It is finding these solutions that drives us to express our creative talent and assist others in achieving their personal or business web oriented goals.</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong>Portfolio for Jesse Hadley</strong>
@@ -348,9 +348,9 @@
                             </a>
                             <p>Highland Pine Gifts needed an ecommerce web solution in order to display their products. The website needed to be clean, responsive, and easy to maintain new and existing products. Another requirement was to allow the user to be able to complete a transaction from a shopping cart through the use of PayPal.</p>
                             <br>
-                            <p>Using WordPress, I built highlandpinegifts.com so that each of these requirements is met. The design is free flowing and permits the user to navigate and see content easily. Starting with the Home page, the user is greeted with a clear navigation bar and a fluid slider of featured products.</p> 
+                            <p>Using WordPress, we built highlandpinegifts.com so that each of these requirements is met. The design is free flowing and permits the user to navigate and see content easily. Starting with the Home page, the user is greeted with a clear navigation bar and a fluid slider of featured products.</p> 
                             <br>
-                            <p>I also built a Shop page where Highland Pine Gifts can display their products under various categories and subcategories. This allows the user to find content quickly. The Shop page allows the user to add a product to their cart and also functions as a gateway to the product’s description page.</p> 
+                            <p>We also built a Shop page where Highland Pine Gifts can display their products under various categories and subcategories. This allows the user to find content quickly. The Shop page allows the user to add a product to their cart and also functions as a gateway to the product’s description page.</p> 
                             <br>
                             <p>The product’s description page gives an overview of the product and price. Once the user adds product to the cart, they have the option to checkout. The user may choose to register an account or they can choose to checkout as a guest. Once the purchase is completed, a customized emailed invoice will be sent to the user.</p>
                             <ul class="list-inline item-details">
