--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     </script>
 
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="description" content="Whether you need a responsive website, better SEO, WordPress website development, or web design, Centrix Web Design can help you accomplish your goals."/>
+    <meta name="author" content="Centrix Web Design"/>
+    <meta name="keywords" content="Web Design, web development, WordPress website development, WordPress, responsive web design, SEO, WordPress SEO"/>
 
     <link rel="canonical" href=" { { site.centrixwebdesign.com } }{ { page.centrixwebdesign.com } }" />
 
