--- a/index.html
+++ b/index.html
@@ -246,7 +246,9 @@
                 <div class="row">
                     <div class="footer-col col-xs-12 col-sm-4">
                         <h3>Location:</h3>
-                        <p>UT, USA</p>
+                        <p>PO Box 1032</p>
+                        <p>Centerville UT, 84014 USA</p>
+                        <p>385-393-1662</p>
                     </div>
                     <div class="footer-col col-xs-12 col-sm-4">
                         <h3>Let's Connect</h3>
