--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <link rel="canonical" href=" { { site.centrixwebdesign.com } }{ { page.centrixwebdesign.com } }" />
 
-    <title>Centrix Web Design - Web Development - WordPress - SEO</title>
+    <title>Utah Centrix Web Design - Web Development - WordPress - SEO</title>
 
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -145,7 +145,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="images/portfolio.jpeg" class="img-responsive" alt="Centrix Web Design - Web Development - WordPress - SEO">
+                        <img src="images/portfolio.jpeg" class="img-responsive" alt="Utah Centrix Web Design - Web Development - WordPress - SEO">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -155,7 +155,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="images/highlandpinegiftsthumb.jpeg" class="img-responsive" alt="Centrix Web Design - Web Development - WordPress - SEO Highland Pine Gifts">
+                        <img src="images/highlandpinegiftsthumb.jpeg" class="img-responsive" alt="Utah Centrix Web Design - Web Development - WordPress - SEO Highland Pine Gifts">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -165,7 +165,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="images/jumpstarthygiene.png" class="img-responsive" alt="Centrix Web Design - Web Development - WordPress - SEO Jump Start Hygiene">
+                        <img src="images/jumpstarthygiene.png" class="img-responsive" alt="Utah Centrix Web Design - Web Development - WordPress - SEO Jump Start Hygiene">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -175,7 +175,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="images/dentalcleaning.png" class="img-responsive" alt="Centrix Web Design - Web Development - WordPress - SEO Dental Cleaning">
+                        <img src="images/dentalcleaning.png" class="img-responsive" alt="Utah Centrix Web Design - Web Development - WordPress - SEO Dental Cleaning">
                     </a>
                 </div>
             </div>
@@ -310,7 +310,7 @@
                         <div class="modal-body">
                             <h2>Portfolio</h2>
                             <hr class="star-primary">
-                            <img src="images/portfolio.jpeg" class="img-responsive img-centered" alt="Centrix Web Design - Web Development - WordPress - SEO">
+                            <img src="images/portfolio.jpeg" class="img-responsive img-centered" alt="Utah Centrix Web Design - Web Development - WordPress - SEO">
                             <p>Using HTML and CSS with the power of Bootstrap, the portfolio project creates a responsive design that is clear, concise, and informative. This project has been completely reworked to improve the scalability and fluidity of the user’s browsing experience. Coupled with these aspects, the overall design and color coordination give a long scroll experience that encompasses one-page browsing.</p>
                             <br>
                             <p>When deciding on how to strategically position the content of the webpage to tell our story”, We happened upon the closed-door image. To us, the closed-door image represents a multitude of unseen possibilities and opportunities. Opening these “doors” is our passion, and in doing so, we have the opportunity to help others find solutions to their web needs. It is finding these solutions that drives us to express our creative talent and assist others in achieving their personal or business web oriented goals.</p>
@@ -347,7 +347,7 @@
                             <h2>Highland Pine Gifts</h2>
                             <hr class="star-primary">
                             <a href="http://highlandpinegifts.com/" target="_blank">
-                            <img src="images/highlandpinegiftsthumb.jpeg" class="img-responsive img-centered" alt="Centrix Web Design - Web Development - WordPress - SEO Highland Pine Gifts">
+                            <img src="images/highlandpinegiftsthumb.jpeg" class="img-responsive img-centered" alt="Utah Centrix Web Design - Web Development - WordPress - SEO Highland Pine Gifts">
                             </a>
                             <p>Highland Pine Gifts needed an ecommerce web solution in order to display their products. The website needed to be clean, responsive, and easy to maintain new and existing products. Another requirement was to allow the user to be able to complete a transaction from a shopping cart through the use of PayPal.</p>
                             <br>
@@ -389,7 +389,7 @@
                             <h2>Jump Start Hygiene</h2>
                             <hr class="star-primary">
                             <a href="#" target="blank">
-                            <img src="images/jumpstarthygiene.png" class="img-responsive img-centered" alt="Centrix Web Design - Web Development - WordPress - SEO Jump Start Hygiene">
+                            <img src="images/jumpstarthygiene.png" class="img-responsive img-centered" alt="Utah Centrix Web Design - Web Development - WordPress - SEO Jump Start Hygiene">
                             </a>
                             <p></p>
                             <ul class="list-inline item-details">
@@ -425,7 +425,7 @@
                             <h2>Dental Cleaning</h2>
                             <hr class="star-primary">
                             <a href="#" target="blank">
-                            <img src="images/dentalcleaning.png" class="img-responsive img-centered" alt="Centrix Web Design - Web Development - WordPress - SEO Dental Cleaning">
+                            <img src="images/dentalcleaning.png" class="img-responsive img-centered" alt="Utah Centrix Web Design - Web Development - WordPress - SEO Dental Cleaning">
                             </a>
                             <p></p>
                             <ul class="list-inline item-details">
