--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         </div>
     </section>
 
-    <!-- Contact Section -->
+    <!-- Contact Section 
     <section id="contact">
         <div class="container">
             <div class="row">
@@ -238,7 +238,7 @@
             </div>
         </div>
     </section>
-</div>
+</div> -->
 
     <!-- Footer -->
     <footer class="text-center">
