--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             </div>
             <div class="row">
                 <div class="col-xs-8 col-xs-offset-2">
-                    <form action="//formspree.io/jessewhadley@hotmail.com"
+                    <form action="//formspree.io/jessewhadlehotmail.com"
       method="POST">
 
                      <div class="row control-group">
